--- a/portal.html
+++ b/portal.html
@@ -1,5 +1,6 @@
-<iframe
-    allow="camera; microphone; display-capture; fullscreen; clipboard-read; clipboard-write; autoplay"
-    src="https://c2c.mirotalk.com/join?room=test&name=test"
-    style="height: 100vh; width: 100vw; border: 0px;"
-></iframe>
+<html>
+    <head>
+        <script src="/script.js"></script>
+    </head>
+    <title>Portal</title>
+</html>
