--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 
     <!-- Placeholder audios (played when we receive ring/morse messages) -->
     <audio id="ringAudio" src="audios/ring.mp3" preload="auto"></audio>
-    <audio id="beepAudio" src="audios/beep.wav" preload="auto" loop></audio>
+    <audio id="beepAudio" src="audios/beep.mp3" preload="auto" loop></audio>
 
     <!-- Main logic -->
     <script src="./app.js"></script>
