--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,12 @@
         <video id="localVideo" autoplay muted playsinline class="visible"></video>
 
         <div class="status" id="status">
-          <span class="status-light" id="localLight"></span>
+          <span class="status-light disconnected" id="localLight"></span>
           <span>Local</span>
           <span class="status-light disconnected" id="remoteLight"></span>
           <span>Remote</span>
-          <span id="videoStatus"></span>
+          <span class="status-light disconnected" id="videoStatus"></span>
+          <span>Video</span>
         </div>
       </div>
 
