--- a/public/index.html
+++ b/public/index.html
@@ -30,22 +30,22 @@
         <div class="status" id="status">
           <div class="status-item">
             <span class="status-light disconnected" id="localLight"></span>
-            <span>Local media status</span>
+            <span>Local video</span>
             <span class="status-detail" id="localStatus"></span>
           </div>
           <div class="status-item">
             <span class="status-light disconnected" id="websocketLight"></span>
-            <span>Websocket connection status</span>
+            <span>Server (websocket) connection</span>
             <span class="status-detail" id="websocketStatus"></span>
           </div>
           <div class="status-item">
             <span class="status-light disconnected" id="peerConnectionLight"></span>
-            <span>Peer connection status</span>
+            <span>Peer (WebRTC) connection</span>
             <span class="status-detail" id="peerConnectionStatus"></span>
           </div>
           <div class="status-item">
             <span class="status-light disconnected" id="videoLight"></span>
-            <span>Video status</span>
+            <span>Remote video</span>
             <span class="status-detail" id="videoStatus"></span>
           </div>
         </div>
