--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
             <span>Remote video</span>
             <span class="status-detail" id="videoStatus"></span>
           </div>
+          <div class="status-item">
+            <span class="status-light disconnected" id="dataChannelLight"></span>
+            <span>Data channel</span>
+            <span class="status-detail" id="dataChannelStatus"></span>
+          </div>
         </div>
       </div>
 
